# pysyslog

./: README.md  pyproject.toml
pysyslog/: main.py
