[tool.poetry]
name = "pysyslog"
version = "0.1.0"
description = ""
authors = ["Konstantin Koslowski <konstantin.koslowski@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
pysyslog = "pysyslog.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
